# autobuilder

./: AutoBuilder.cabal  README.ToDo  README.features  Setup.hs  nightly.hs  nightly.sh  testdebootstrap.sh
Attic/: CIO.hs  DryRun.hs  MyHtml.hs  NewDist.hs  OldAutoBuilder.hs  OldParams.hs  Test.hs  WebPage.hs
Debian/AutoBuilder/: BuildEnv.hs  BuildTarget.hs  LocalRepo.hs  Main.hs  Params.hs  Prelude.hs  Target.hs  Version.hs
Debian/AutoBuilder/BuildTarget/: Apt.hs  Bzr.hs  Cd.hs  Darcs.hs  DebDir.hs  Debianize.hs  Git.hs  Hackage.hs  Hg.hs  Patch.hs  Proc.hs  Quilt.hs  SourceDeb.hs  Svn.hs  Tla.hs  Twice.hs  Uri.hs
Debian/AutoBuilder/Types/: Buildable.hs  CacheRec.hs  DefaultParams.hs  Download.hs  Fingerprint.hs  Packages.hs  ParamRec.hs
Documentation/: AutobuilderDesign.tex  ChangeLog.ltx  CodeReview.hs  Offsite  VersionNumbers.lhs  VersionNumbersUbuntu.tex
Example/: README  Targets.hs  Usage.hs  autobuilder.hs
Test/: Fingerprint.hs  ParamRec.hs  Test.hs
debian/: changelog
