Name:           AutoBuilder
Version:        6.72
License:        BSD3
Copyright:      (c) 2006-2013, SeeReason Partners LLC
Author:         David Fox <dsf@seereason.com>
Maintainer:     David Fox <dsf@seereason.com>
Synopsis:       Build Debian source packages in suitable environments.
Homepage:       http://src.seereason.com/autobuilder
Description:
  The autobuilder program is now shipped as a haskell source file
  which uses the autobuilder library.  To configure it make a copy of
  @\/usr\/bin\/AutoBuilder.hs@ to somewhere such as @~\/AutoBuilder.hs@, edit
  the parameters in that file, and then use the command
  @
    sudo runhaskell ~\/AutoBuilder.hs
  @
  Documentation for the parameters is found in the
  'ParamClass' type class in the "Debian.AutoBuilder.ParamClass"
  module, and for the different build target types in the description
  of "Debian.AutoBuilder.BuildTarget".
Cabal-Version:  >= 1.9
Build-type:     Simple

flag local-debian-repo
  Description: Link directly to the source of the debian-repo library
  Default: False
  Manual: True

flag local-cabal-debian
  Description: Link directly to the source of the cabal-debian library
  Default: False
  Manual: True

flag local-debian
  Description: Link directly to the source of the debian library
  Default: False
  Manual: True

Library
  Hs-Source-Dirs: .
  Build-Depends:
        applicative-extras >= 0.1.8
      , base
      , bytestring
      , bzlib
      , Cabal
      , containers
      , directory
      , exceptions >= 0.6
      , Extra
      , file-embed
      , filepath
      , happstack-util
      , HaXml >= 1.22.5
      , ListLike >= 4.0
      , magic
      , MIME >= 1.1
      , mtl
      , network-uri
      , old-locale
      , old-time
      , parsec
      , prettyclass
      , process
      , process-extras >= 0.2.0
      , pureMD5
      , regex-compat
      , regex-posix
      , regex-tdfa
      , syb
      , tar >= 0.4
      , template-haskell
      , text
      , time
      , unix
      , Unixutils >= 1.51
      , utf8-string
      , xhtml
      , zlib
  GHC-Options: -O2 -threaded -Wall -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-type-defaults
  Exposed-modules:
    Debian.AutoBuilder.BuildEnv,
    Debian.AutoBuilder.BuildTarget,
    Debian.AutoBuilder.BuildTarget.Apt,
    Debian.AutoBuilder.BuildTarget.Bzr,
    Debian.AutoBuilder.BuildTarget.Cd,
    Debian.AutoBuilder.BuildTarget.Darcs,
    Debian.AutoBuilder.BuildTarget.DebDir,
    Debian.AutoBuilder.BuildTarget.Debianize,
    Debian.AutoBuilder.BuildTarget.Git,
    Debian.AutoBuilder.BuildTarget.Hackage,
    Debian.AutoBuilder.BuildTarget.Hg,
    Debian.AutoBuilder.BuildTarget.Patch,
    Debian.AutoBuilder.BuildTarget.Proc,
    Debian.AutoBuilder.BuildTarget.Quilt,
    Debian.AutoBuilder.BuildTarget.SourceDeb,
    Debian.AutoBuilder.BuildTarget.Svn,
    Debian.AutoBuilder.BuildTarget.Tla,
    Debian.AutoBuilder.BuildTarget.Twice,
    Debian.AutoBuilder.BuildTarget.Uri,
    Debian.AutoBuilder.LocalRepo,
    Debian.AutoBuilder.Main,
    Debian.AutoBuilder.Params,
    Debian.AutoBuilder.Prelude,
    Debian.AutoBuilder.Target,
    Debian.AutoBuilder.Types.Buildable
    Debian.AutoBuilder.Types.CacheRec
    Debian.AutoBuilder.Types.DefaultParams
    Debian.AutoBuilder.Types.Download
    Debian.AutoBuilder.Types.Fingerprint
    Debian.AutoBuilder.Types.Packages,
    Debian.AutoBuilder.Types.ParamRec
    Debian.AutoBuilder.Version
    Paths_AutoBuilder

  if flag(local-debian-repo)
    Hs-Source-Dirs: ../debian-repo
    Build-Depends: lens, transformers, transformers-compat, deepseq
    Exposed-modules:
        Debian.Releases,
        Debian.Repo,
        Debian.Repo.AptImage,
        Debian.Repo.Changes,
        Debian.Repo.Dependencies,
        Debian.Repo.EnvPath,
        Debian.Repo.Internal.Apt,
        Debian.Repo.Internal.IO,
        Debian.Repo.Internal.Repos,
        Debian.Repo.Fingerprint,
        Debian.Repo.LocalRepository,
        Debian.Repo.MonadOS,
        Debian.Repo.OSImage,
        Debian.Repo.Package,
        Debian.Repo.PackageID,
        Debian.Repo.PackageIndex,
        Debian.Repo.Prelude,
        Debian.Repo.Prelude.Bool,
        Debian.Repo.Prelude.Files,
        Debian.Repo.Prelude.GPGSign,
        Debian.Repo.Prelude.List,
        Debian.Repo.Prelude.Lock,
        Debian.Repo.Prelude.Misc,
        Debian.Repo.Prelude.Process,
        Debian.Repo.Prelude.SSH,
        Debian.Repo.Prelude.Time,
        Debian.Repo.Prelude.Verbosity,
        Debian.Repo.Release,
        Debian.Repo.RemoteRepository,
        Debian.Repo.Repo,
        Debian.Repo.Rsync,
        Debian.Repo.Slice,
        Debian.Repo.SourceTree,
        Debian.Repo.State.AptImage,
        Debian.Repo.State.OSImage,
        Debian.Repo.State.Package,
        Debian.Repo.State.PackageIndex,
        Debian.Repo.State.Release,
        Debian.Repo.State.Repository,
        Debian.Repo.State.Slice,
        Debian.Repo.Top,
        Debian.VersionPolicy
  else
    Build-Depends: debian-repo >= 5.74

  if flag(local-cabal-debian)
    Hs-Source-Dirs: ../cabal-debian/src, ../cabal-debian/dist/build/autogen
    Build-Depends: data-default, Diff, set-extra, hsemail, lens, memoize, pretty, syb
    Exposed-Modules:
      Data.Algorithm.Diff.Context
      Data.Algorithm.Diff.Pretty
      Debian.GHC
      Debian.Policy
      Distribution.Version.Invert
      Debian.Debianize
      Debian.Debianize.BasicInfo
      Debian.Debianize.BinaryDebDescription
      Debian.Debianize.BuildDependencies
      Debian.Debianize.Bundled
      Debian.Debianize.CabalInfo
      Debian.Debianize.Changelog
      Debian.Debianize.CopyrightDescription
      Debian.Debianize.DebianName
      Debian.Debianize.DebInfo
      Debian.Debianize.Details
      Debian.Debianize.Files
      Debian.Debianize.Finalize
      Debian.Debianize.Goodies
      Debian.Debianize.InputCabal
      Debian.Debianize.InputDebian
      Debian.Debianize.Interspersed
      Debian.Debianize.Monad
      Debian.Debianize.Options
      Debian.Debianize.Output
      Debian.Debianize.Prelude
      Debian.Debianize.SourceDebDescription
      Debian.Debianize.SubstVars
      Debian.Debianize.VersionSplits
      OldLens
      Paths_cabal_debian
    Other-Modules:
      Debian.Orphans
  else
    Build-Depends: cabal-debian >= 4.21, deepseq

  if flag(local-debian)
    Hs-Source-Dirs: ../debian-haskell
    Build-Depends: ListLike, network
    Exposed-modules:
        Debian.Apt.Dependencies,
        Debian.Apt.Index,
        Debian.Apt.Methods,
        Debian.Apt.Package,
        Debian.Arch,
        Debian.Changes,
        Debian.Control,
        Debian.Control.Common,
        Debian.Control.ByteString,
        Debian.Control.Policy,
        Debian.Control.String,
        Debian.Control.Text,
        Debian.Deb,
        Debian.Extra.Files,
        Debian.GenBuildDeps,
        Debian.Loc,
        Debian.Pretty,
        Debian.Relation,
        Debian.Relation.ByteString,
        Debian.Relation.Common,
        Debian.Relation.String,
        Debian.Relation.Text,
        Debian.Release,
        Debian.Sources,
        Debian.Version,
        Debian.Version.ByteString,
        Debian.Version.Common,
        Debian.Version.String,
        Debian.Version.Text,
        Debian.Report,
        Debian.Time,
        Debian.URI,
        Debian.UTF8,
        Debian.Util.FakeChanges
    Other-Modules:
        Debian.Version.Internal
  else
    Build-Depends: debian >= 3.87

Test-Suite autobuilder-tests
  Type: exitcode-stdio-1.0
  Hs-Source-Dirs: Test
  Main-Is: Test.hs
  ghc-options: -O2 -threaded -Wall
  Build-Depends: base, containers, Cabal, HUnit

  if flag (local-debian-repo)
    Hs-Source-Dirs: ., ../debian-repo, ../cabal-debian/dist/build/autogen
    Build-Depends: deepseq
  else
    Build-Depends: AutoBuilder, debian-repo >= 5.74

  if flag (local-cabal-debian)
    Hs-Source-Dirs: ., ../cabal-debian/src
  else
    Build-Depends: cabal-debian >= 4.24

  if flag (local-debian)
    Hs-Source-Dirs: ../debian-haskell
  else
    Build-Depends: debian >= 3.87
